Modif codeResultatDAL, DAOFactory ajout utilisateur, UtilisateurDAOJdbcImpl et creation CodeResultatBLL, messageserreur, utilisateurManager et UtilisateurDAO

--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -4,20 +4,23 @@
 10001=Une erreur non geree est survenue lors de l'enrgistrement des informations.
 
 #=>Erreurs Utilisateurs
-1002=
+10002=
 
 #=>Erreurs Articles
-2000= 
+15000= 
 
 
 #ERREURS RAPPORTEES PAR LA BLL:
-#=>Erreurs Utilisateurs
-3000=
+#=>Erreurs Utilisateurs - il faut mettre le code pour chaque méthode verif (Dimitri)
+20000=Le format de l'adresse mail est incorrect (vide ou trop longue), veuillez saisir de nouveau.
+20001=La format du pseudo est incorrect (vide ou trop longue), veuillez saisir de nouveau.
+20002=Le pseudo est déjà utilisé, veuillez en saisir un autre, s'il vous plait
+20003 = L'adresse mail est déjà utilisé, veuillez sasir un autr, s'il vous plait
 
 
 #=> Erreurs Articles
-4000=
+30000=
 
 #ERREURS RAPPORTEES PAR LES SERVLETS:
 #=>Erreurs Servlets
-5000=
+40000=
