ajout suppression article & erreurs liées & erreurs liées check emails et pseudos

--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -2,12 +2,15 @@
 #=>Erreurs generales
 10000=Une tentative d'enrgistrement d'informations inexistantes a eu lieu.
 10001=Une erreur non geree est survenue lors de l'enrgistrement des informations.
-
-#=>Erreurs Utilisateurs
 10002=
 
+#=>Erreurs Utilisateurs
+10100=La liste de pseudo demandée est inaccessible.
+10101=La liste d'emails demandéee est inaccessible.
+
 #=>Erreurs Articles
-15000= 
+15000=Une erreur a eu lieu à la suppression de l'article. 
+15001=Le propriètaire de l'article est introuvable.
 
 
 #ERREURS RAPPORTEES PAR LA BLL:
