modif messafes erreurs correction legere

--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -15,7 +15,7 @@
 20000=Le format de l'adresse mail est incorrect (vide ou trop longue), veuillez saisir de nouveau.
 20001=La format du pseudo est incorrect (vide ou trop longue), veuillez saisir de nouveau.
 20002=Le pseudo est déjà utilisé, veuillez en saisir un autre, s'il vous plait
-20003 = L'adresse mail est déjà utilisé, veuillez sasir un autr, s'il vous plait
+20003 = L'adresse mail est déjà utilisé, veuillez sasir un autre, s'il vous plait
 
 
 #=> Erreurs Articles
