ajout fonction ajouter article et erreurs

--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -11,6 +11,7 @@
 #=>Erreurs Articles
 15000=Une erreur a eu lieu à la suppression de l'article. 
 15001=Le propriètaire de l'article est introuvable.
+15002=L'ajout de l'article a connu une erreur, oups
 
 
 #ERREURS RAPPORTEES PAR LA BLL:
