--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -7,6 +7,7 @@
 #=>Erreurs Utilisateurs
 10100=La liste de pseudo demandée est inaccessible.
 10101=La liste d'emails demandéee est inaccessible.
+10102= L'utilisateur demandé est inaccessible.
 
 #=>Erreurs Articles
 15000=Une erreur a eu lieu à la suppression de l'article. 
