MAJ ajout article et codes erreurs liés

--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -12,7 +12,8 @@
 #=>Erreurs Articles
 15000=Une erreur a eu lieu à la suppression de l'article. 
 15001=Le propriètaire de l'article est introuvable.
-15002=L'ajout de l'article a connu une erreur, oups
+15002=L'ajout de l'article a connu une erreur, oups.
+15003=La récupération de l'article a échouée, surement un coup des pirates
 
 
 #ERREURS RAPPORTEES PAR LA BLL:
