maj messages erreurs pour récupération article et liste d'articles du vendeur

--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -14,6 +14,8 @@
 15001=Le propriètaire de l'article est introuvable.
 15002=L'ajout de l'article a connu une erreur, oups.
 15003=La récupération de l'article a échouée, surement un coup des pirates
+15004=Les lutins font les malins, echec de la réucpération des articles de ce vendeur
+15005= Les extraterrestres m'ont empécher de récupérer un article de la liste complète
 
 
 #ERREURS RAPPORTEES PAR LA BLL:
