MAJ methodes insertion articles

--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -16,6 +16,7 @@
 15003=La récupération de l'article a échouée, surement un coup des pirates
 15004=Les lutins font les malins, echec de la réucpération des articles de ce vendeur
 15005= Les extraterrestres m'ont empécher de récupérer un article de la liste complète
+15006=Erreur lors de la récupération de la catégorie
 
 
 #ERREURS RAPPORTEES PAR LA BLL:
