mise en place de la fonction oublie de mot de passe

--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -7,7 +7,8 @@
 #=>Erreurs Utilisateurs
 10100=La liste de pseudo demandée est inaccessible.
 10101=La liste d'emails demandéee est inaccessible.
-10102= L'utilisateur demandé est inaccessible.
+10102=L'utilisateur demandé est inaccessible.
+10103=Le mot de passe n'a pas pu être modifier.
 
 #=>Erreurs Articles
 15000=Une erreur a eu lieu à la suppression de l'article. 
