MAJ message erreur recupération articles selon etatVente

--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -19,6 +19,7 @@
 15005= Les extraterrestres m'ont empécher de récupérer un article de la liste complète
 15006=Erreur lors de la récupération de la catégorie
 15007=Erreur de la récupération de la liste des catégories existantes
+15008=Erreur de la récupération des articles de cet état de vente
 
 
 #ERREURS RAPPORTEES PAR LA BLL:
