--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -21,7 +21,8 @@
 15007=Erreur de la récupération de la liste des catégories existantes
 15008=Erreur de la récupération des articles de cet état de vente
 
-
+#=>Erreurs Enchères
+15100=Erreur de l'insertion de l'enchère
 #ERREURS RAPPORTEES PAR LA BLL:
 #=>Erreurs Utilisateurs - il faut mettre le code pour chaque méthode verif (Dimitri)
 20000=Le format de l'adresse mail est incorrect (vide ou trop longue), veuillez saisir de nouveau.
