maj suite reu AnneLise et ajout methode add,update,delete pour retraits

--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -23,6 +23,12 @@
 
 #=>Erreurs Enchères
 15100=Erreur de l'insertion de l'enchère
+
+#=>Erreurs RETRAITS
+15200=Erreur à la sauvegarde du lieu de retrait
+15201=Erreur de la mise à jour du point de retrait
+15202=Erreur de la suppression du point de retrait
+
 #ERREURS RAPPORTEES PAR LA BLL:
 #=>Erreurs Utilisateurs - il faut mettre le code pour chaque méthode verif (Dimitri)
 20000=Le format de l'adresse mail est incorrect (vide ou trop longue), veuillez saisir de nouveau.
@@ -31,8 +37,6 @@
 20003 = L'adresse mail est déjà utilisé, veuillez sasir un autre, s'il vous plait
 
 
-#=> Erreurs Articles
-30000=
 
 #ERREURS RAPPORTEES PAR LES SERVLETS:
 #=>Erreurs Servlets
