ajout methode recherche article par son ID utilisation prévue dans les enchères

--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -20,6 +20,7 @@
 15006=Erreur lors de la récupération de la catégorie
 15007=Erreur de la récupération de la liste des catégories existantes
 15008=Erreur de la récupération des articles de cet état de vente
+15009=Erreur récupération de l'article par son ID interne
 
 #=>Erreurs Enchères
 15100=Erreur de l'insertion de l'enchère
