--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -21,9 +21,12 @@
 15007=Erreur de la récupération de la liste des catégories existantes
 15008=Erreur de la récupération des articles de cet état de vente
 15009=Erreur récupération de l'article par son ID interne
+15010=Erreur de la mise à jour de l'état de la vente
+15011=Erreur de la mise à jour du prix de vente de l'article
 
 #=>Erreurs Enchères
 15100=Erreur de l'insertion de l'enchère
+15101= Erreur de la récupération des informations de cette enchère
 
 #=>Erreurs RETRAITS
 15200=Erreur à la sauvegarde du lieu de retrait
