Crea methode articleByNomArticle et crea jsp detail vente et servlet associée

--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -23,6 +23,7 @@
 15009=Erreur récupération de l'article par son ID interne
 15010=Erreur de la mise à jour de l'état de la vente
 15011=Erreur de la mise à jour du prix de vente de l'article
+15012=Erreur de la récupération de l'article par son nom
 
 #=>Erreurs Enchères
 15100=Erreur de l'insertion de l'enchère
