--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -46,3 +46,6 @@
 #ERREURS RAPPORTEES PAR LES SERVLETS:
 #=>Erreurs Servlets
 40000=Une erreur est survenue lors de la récupération des catégories à l'affichage
+40001=Une erreur est survenue lors de la récupération des infos utilisateurs
+40002=Erreur de l'enregistrement de l'article
+40003=Erreur de l'ajout du point de retrait ou de sa mise à jour
