mise en place servlet et jsp detail vente opérationnelle, reste à fournir en requete le pseudo du vendeur de l'article et le nom d el'objet a fficher

--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -28,11 +28,13 @@
 #=>Erreurs Enchères
 15100=Erreur de l'insertion de l'enchère
 15101= Erreur de la récupération des informations de cette enchère
+15102=Erreur de la récupération du montant de l'enchère
 
 #=>Erreurs RETRAITS
 15200=Erreur à la sauvegarde du lieu de retrait
 15201=Erreur de la mise à jour du point de retrait
 15202=Erreur de la suppression du point de retrait
+15203=Erreur de récupération du lieu de retrait
 
 #ERREURS RAPPORTEES PAR LA BLL:
 #=>Erreurs Utilisateurs - il faut mettre le code pour chaque méthode verif (Dimitri)
