--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -24,6 +24,7 @@
 15010=Erreur de la mise à jour de l'état de la vente
 15011=Erreur de la mise à jour du prix de vente de l'article
 15012=Erreur de la récupération de l'article par son nom
+15013=Erreur de récupération de l'identifiant de l'article
 
 #=>Erreurs Enchères
 15100=Erreur de l'insertion de l'enchère
