--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -30,6 +30,7 @@
 15100=Erreur de l'insertion de l'enchère
 15101= Erreur de la récupération des informations de cette enchère
 15102=Erreur de la récupération du montant de l'enchère
+15103=Erreur mise à jour de l'enchère
 
 #=>Erreurs RETRAITS
 15200=Erreur à la sauvegarde du lieu de retrait
@@ -52,3 +53,4 @@
 40001=Une erreur est survenue lors de la récupération des infos utilisateurs
 40002=Erreur de l'enregistrement de l'article
 40003=Erreur de l'ajout du point de retrait ou de sa mise à jour
+40004=Erreur de la mise à jour de l'enchère
