--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -9,6 +9,7 @@
 10101=La liste d'emails demandéee est inaccessible.
 10102=L'utilisateur demandé est inaccessible.
 10103=Le mot de passe n'a pas pu être modifier.
+10104=Erreur de mise à jour du crédit d el'utilisateur
 
 #=>Erreurs Articles
 15000=Une erreur a eu lieu à la suppression de l'article. 
