Mise en place gestion des modif de l'enchère

--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -55,3 +55,4 @@
 40002=Erreur de l'enregistrement de l'article
 40003=Erreur de l'ajout du point de retrait ou de sa mise à jour
 40004=Erreur de la mise à jour de l'enchère
+40005=Erreur de la gestion de la modifiaction de l'enchère
