--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -1,23 +1,25 @@
 #ERREURS RAPPORTEES PAR LA DAL:
 #=>Erreurs generales
-10000=Une tentative d'enrgistrement d'informations inexistantes a eu lieu.
-10001=Une erreur non geree est survenue lors de l'enrgistrement des informations.
+10000=Une tentative d'enregistrement d'informations inexistantes a eu lieu.
+10001=Une erreur non geree est survenue lors de l'enregistrement des informations.
 10002=
 
 #=>Erreurs Utilisateurs
-10100=La liste de pseudo demandée est inaccessible.
+10100=La liste des pseudos demandée est inaccessible.
 10101=La liste d'emails demandéee est inaccessible.
 10102=L'utilisateur demandé est inaccessible.
-10103=Le mot de passe n'a pas pu être modifier.
-10104=Erreur de mise à jour du crédit d el'utilisateur
+10103=Le mot de passe n'a pas pu être modifié.
+10104=Erreur de mise à jour du crédit de l'utilisateur
+10105= Erreur de la mise à jour du profil.
+10106= Erreur de la suppression du profil, ce n'est pas grave ne partez pas.
 
 #=>Erreurs Articles
 15000=Une erreur a eu lieu à la suppression de l'article. 
-15001=Le propriètaire de l'article est introuvable.
+15001=Le proprietaire de l'article est introuvable.
 15002=L'ajout de l'article a connu une erreur, oups.
 15003=La récupération de l'article a échouée, surement un coup des pirates
-15004=Les lutins font les malins, echec de la réucpération des articles de ce vendeur
-15005= Les extraterrestres m'ont empécher de récupérer un article de la liste complète
+15004=Les lutins font les malins, echec de la récupération des articles de ce vendeur
+15005= Les extraterrestres m'ont empéché de récupérer un article de la liste complète
 15006=Erreur lors de la récupération de la catégorie
 15007=Erreur de la récupération de la liste des catégories existantes
 15008=Erreur de la récupération des articles de cet état de vente
@@ -44,8 +46,8 @@
 20000=Le format de l'adresse mail est incorrect (vide ou trop longue), veuillez saisir de nouveau.
 20001=La format du pseudo est incorrect (vide ou trop longue), veuillez saisir de nouveau.
 20002=Le pseudo est déjà utilisé, veuillez en saisir un autre, s'il vous plait
-20003 = L'adresse mail est déjà utilisé, veuillez sasir un autre, s'il vous plait
-
+20003=L'adresse mail est déjà utilisé, veuillez sasir un autre, s'il vous plait
+20004=Oups ! Le mot de passe n'est pas correct, veuillez re-essayer.
 
 
 #ERREURS RAPPORTEES PAR LES SERVLETS:
