Modification article presque terminé

--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -28,6 +28,7 @@
 15011=Erreur de la mise à jour du prix de vente de l'article
 15012=Erreur de la récupération de l'article par son nom
 15013=Erreur de récupération de l'identifiant de l'article
+15014=Erreur de la mise à jour de l'article
 
 #=>Erreurs Enchères
 15100=Erreur de l'insertion de l'enchère
@@ -48,6 +49,7 @@
 20002=Le pseudo est déjà utilisé, veuillez en saisir un autre, s'il vous plait
 20003=L'adresse mail est déjà utilisé, veuillez sasir un autre, s'il vous plait
 20004=Oups ! Le mot de passe n'est pas correct, veuillez re-essayer.
+20005=Erreur de l'ajustement du crédit suite à l'enchère
 
 
 #ERREURS RAPPORTEES PAR LES SERVLETS:
