Suppression de SYSO

--- a/src/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/fr/eni/encheres/messages/messages_erreur.properties
@@ -16,7 +16,7 @@
 #=>Erreurs Articles
 15000=Une erreur a eu lieu à la suppression de l'article. 
 15001=Le proprietaire de l'article est introuvable.
-15002=L'ajout de l'article a connu une erreur, oups.
+15002=L'ajout de l'article a con	
 15003=La récupération de l'article a échouée, surement un coup des pirates
 15004=Les lutins font les malins, echec de la récupération des articles de ce vendeur
 15005= Les extraterrestres m'ont empéché de récupérer un article de la liste complète
